parents/children added to productType detail

--- a/Client/src/app/productTypes/productTypeDetailOverview/productTypeDetailOverview.component.html
+++ b/Client/src/app/productTypes/productTypeDetailOverview/productTypeDetailOverview.component.html
@@ -1,8 +1,206 @@
 <div class="row">
+  <!-- Main ProductType detail view, displays all info of selected ProductType and has the option to edit these infos -->
   <div class="col-md-6 p-5">
-    <app-productTypeDetail></app-productTypeDetail>
+    <div class="p-5">
+      <form [formGroup]="productTypeForm">
+        <input style="display: none" type="file" accept="image/*" class="form-control" (change)="preview(file.files)"
+          [disabled]="productTypeForm.disabled" #file>
+
+        <div class="form-group row">
+          <img style="max-height: 15em" id="productImage" class="image-fluid rounded fit-image p-3 offset-3 h-100"
+            [src]="imgURL" onError="this.src='./assets/images/noImageFound.gif';" alt="Product Image"
+            (click)="file.click()">
+        </div>
+        <div class="form-group row">
+          <span class="offset-3 px-3" style="color:red;" *ngIf="message">{{message}}</span>
+        </div>
+
+        <div class="form-group row">
+          <label for="productTypeName" class="col-md-3 col-form-label text-left">Name</label>
+          <div class="col-md-9">
+            <input type="text" class="form-control" formControlName="productTypeName"
+              [ngClass]="{ 'is-invalid': submitted && f.productTypeName.errors }">
+          </div>
+        </div>
+        <div class="offset-3 px-3 form-group row text-danger"
+          *ngIf="submitted && f['productTypeName'].errors?.required">Name is required.</div>
+        <div class="offset-3 px-3 form-group row text-danger"
+          *ngIf="submitted && f['productTypeName'].errors?.minlength">Minimum length is
+          {{valditationConstants.MinNameLength}}</div>
+        <div class="offset-3 px-3 form-group row text-danger"
+          *ngIf="submitted && f['productTypeName'].errors?.maxlength">Maximum length is
+          {{valditationConstants.MaxNameLength}}</div>
+
+        <div class="form-group row">
+          <label for="ean" class="col-md-3 col-form-label text-left">EAN</label>
+          <div class="col-md-9">
+            <input type="text" class="form-control" formControlName="ean"
+              [ngClass]="{ 'is-invalid': submitted && f.ean.errors }">
+          </div>
+        </div>
+        <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['ean'].errors?.required">EAN is
+          required.</div>
+
+        <div class="form-group row">
+          <label for="price" class="col-md-3 col-form-label text-left">Price</label>
+          <div class="col-md-9">
+            <input type="number" class="form-control" [value]="productTypeForm.get('price').value" step="0.01"
+              formControlName="price" [ngClass]="{ 'is-invalid': submitted && f.price.errors }">
+          </div>
+        </div>
+        <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['price'].errors?.required">Price is
+          required.</div>
+
+        <div class="form-group row">
+          <label for="description" class="col-md-3 col-form-label text-left">Description</label>
+          <div class="col-md-9">
+            <textarea rows="5" class="form-control" formControlName="description"
+              [ngClass]="{ 'is-invalid': submitted && f.description.errors }">
+                    </textarea>
+          </div>
+        </div>
+
+        <div *ngIf="childrenToAdd.length > 0" class="form-group row">
+          <label for="children" class="col-md-3 col-form-label text-left">Children to add</label>
+          <div class="col-md-9">
+            <div class="list-group list-group-flush">
+              <div class="list-group-item card" *ngFor="let child of childrenToAdd">
+                <div class="row">
+                  <h5 class="col-md-4">{{child.name}}</h5>
+                  <button class="col-md-2 offset-6 btn btn-outline-secondary"
+                    (click)=removeAddChildClicked(child)>Remove</button>
+                </div>
+                <div class="row">
+                  <span class="col-md-4">
+                    <b>EAN:</b>
+                    {{child.ean}}
+                  </span>
+                  <span class="col-md-4">
+                    <b>Price:</b>
+                    {{child.price}}
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div *ngIf="parentsToAdd.length > 0" class="form-group row">
+          <label for="parents" class="col-md-3 col-form-label text-left">Parents to add</label>
+          <div class="col-md-9">
+            <div class="list-group list-group-flush">
+              <div class="list-group-item card" *ngFor="let parent of parentsToAdd">
+                <div class="row">
+                  <h5 class="col-md-4">{{parent.name}}</h5>
+                  <button class="col-md-2 offset-6 btn btn-outline-secondary"
+                    (click)=removeAddParentClicked(parent)>Remove</button>
+                </div>
+                <div class="row">
+                  <span class="col-md-4">
+                    <b>EAN:</b>
+                    {{parent.ean}}
+                  </span>
+                  <span class="col-md-4">
+                    <b>Price:</b>
+                    {{parent.price}}
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div *ngIf="childrenToRemove.length > 0" class="form-group row">
+          <label for="children" class="col-md-3 col-form-label text-left">Children to remove</label>
+          <div class="col-md-9">
+            <div class="list-group list-group-flush">
+              <div class="list-group-item card" *ngFor="let child of childrenToRemove">
+                <div class="row">
+                  <h5 class="col-md-4">{{child.name}}</h5>
+                  <button class="col-md-2 offset-6 btn btn-outline-secondary"
+                    (click)=removeRemoveChildClicked(child)>Remove</button>
+                </div>
+                <div class="row">
+                  <span class="col-md-4">
+                    <b>EAN:</b>
+                    {{child.ean}}
+                  </span>
+                  <span class="col-md-4">
+                    <b>Price:</b>
+                    {{child.price}}
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div *ngIf="parentsToRemove.length > 0" class="form-group row">
+          <label for="parents" class="col-md-3 col-form-label text-left">Parents to remove</label>
+          <div class="col-md-9">
+            <div class="list-group list-group-flush">
+              <div class="list-group-item card" *ngFor="let parent of parentsToRemove">
+                <div class="row">
+                  <h5 class="col-md-4">{{parent.name}}</h5>
+                  <button class="col-md-2 offset-6 btn btn-outline-secondary"
+                    (click)=removeRemoveParentClicked(parent)>Remove</button>
+                </div>
+                <div class="row">
+                  <span class="col-md-4">
+                    <b>EAN:</b>
+                    {{parent.ean}}
+                  </span>
+                  <span class="col-md-4">
+                    <b>Price:</b>
+                    {{parent.price}}
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <div class="col-md-9 offset-3">
+            <div class="row justify-content-between px-3">
+              <button *ngIf="!isEditing" type="button" class="btn btn-outline-secondary col-md-4"
+                (click)="editClicked()">Edit</button>
+              <a *ngIf="!isEditing" class="btn btn-outline-secondary col-md-4" [routerLink]="'/productTypes'">Back</a>
+
+              <button *ngIf="isEditing" type="button" class="btn btn-outline-secondary col-md-4"
+                (click)="updateClicked()">Update</button>
+              <button *ngIf="isEditing" type="button" class="btn btn-outline-secondary col-md-4"
+                (click)="cancelClicked()">Cancel</button>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
+
+  <!-- Tabs for displaying children, add children and add parents -->
   <div class="col-md-6 p-5">
-    <app-productTypeList></app-productTypeList>
+    <ngb-tabset>
+      <ngb-tab title="children">
+        <ng-template ngbTabContent>
+          <app-productTypeChildList (childRemoved)="childRemoved($event)"></app-productTypeChildList>
+        </ng-template>
+      </ngb-tab>
+      <ngb-tab title="parents">
+        <ng-template ngbTabContent>
+          <app-productTypeParentList (parent)="parentRemoved($event)"></app-productTypeParentList>
+        </ng-template>
+      </ngb-tab>      <ngb-tab title="Add Child">
+        <ng-template ngbTabContent>
+          <app-addToProductType (ptAdded)="addChildAdded($event)"></app-addToProductType>
+        </ng-template>
+      </ngb-tab>
+      <ngb-tab title="Add Parent">
+        <ng-template ngbTabContent>
+          <app-addToProductType (ptAdded)="addParentAdded($event)"></app-addToProductType>
+        </ng-template>
+      </ngb-tab>
+    </ngb-tabset>
+
   </div>
 </div>
