--- a/Client/src/app/productTypes/addToProductType/addToProductType.component.html
+++ b/Client/src/app/productTypes/addToProductType/addToProductType.component.html
@@ -5,25 +5,20 @@
   </form>
 </div>
 <div class="list-group list-group-flush">
-  <a class="card-body text-dark card-link" *ngFor="let p of filteredProductTypes"
-    [routerLink]="['/productTypeDetailOverview', p.id]">
-    <div class="card">
-      <div class="row">
-        <div class="col-md-2 text-center">
-          <img style="max-height: 10em" src="data:image/png;base64,{{p.imageBase64}}"
-            class="image-fluid rounded fit-image p-2">
-        </div>
-        <div class="col-md-10 px-3">
-          <div class="card-block px-3">
-            <h4 class="card-title">{{p.name}}</h4>
-            <div class="row">
-              <p class="col-md-6 card-text"><b>EAN:</b> {{p.ean}}</p>
-              <p class="col-md-6 card-text"><b>Price:</b> {{p.price | number: '1.2'}}</p>
-            </div>
-            <p style="height: 5em" class="card-text overflow-auto"><b>Description: </b>{{p.Description}}</p>
+  <div class="card" *ngFor="let pt of filteredProductTypes">
+    <div class="row">
+      <div class="col-md-9 px-3">
+        <div class="card-block px-3">
+          <h4 class="card-title">{{pt.name}}</h4>
+          <div class="row">
+            <p class="col-md-6 card-text"><b>EAN:</b> {{pt.ean}}</p>
+            <p class="col-md-6 card-text"><b>Price:</b> {{pt.price | number: '1.2'}}</p>
           </div>
         </div>
       </div>
+      <div class="col-md-3 p-3">
+        <button class="btn btn-outline-secondary h-100 w-100" (click)=addClicked(pt)><span class="align-middle">Add</span></button>
+      </div>
     </div>
-  </a>
+  </div>
 </div>
