--- a/Client/src/app/productTypes/productTypeCreate/productTypeCreate.component.html
+++ b/Client/src/app/productTypes/productTypeCreate/productTypeCreate.component.html
@@ -1,60 +1,135 @@
-<div class="p-5">
-  <form [formGroup]="productTypeForm">
-    <input style="display: none" type="file" accept="image/*" class="form-control"
-      (change)="preview(file.files)" #file>
+<div class="row">
 
-    <div class="form-group row">
-      <img style="max-height: 15em" class="image-fluid rounded fit-image p-3 offset-3 h-100" [src]="imgURL" onError="this.src='./assets/images/noImageFound.gif';" alt="ProductType Image" (click)="file.click()">
-    </div>
-    <div class="form-group row">
-      <span class="offset-3 px-3" style="color:red;" *ngIf="message">{{message}}</span>
-    </div>
+  <div class="col-md-6 p-5">
+    <form [formGroup]="productTypeForm">
+      <input style="display: none" type="file" accept="image/*" class="form-control" (change)="preview(file.files)"
+        #file>
 
-    <div class="form-group row">
-      <label for="productTypeName" class="col-md-3 col-form-label text-left">Name</label>
-      <div class="col-md-9">
-        <input type="text" class="form-control" formControlName="productTypeName"
-          [ngClass]="{ 'is-invalid': submitted && f.productTypeName.errors }">
+      <div class="form-group row">
+        <img style="max-height: 15em" class="image-fluid rounded fit-image p-3 offset-3 h-100" [src]="imgURL"
+          onError="this.src='./assets/images/noImageFound.gif';" alt="ProductType Image" (click)="file.click()">
       </div>
-    </div>
-    <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['productTypeName'].errors?.required">Name is required.</div>
-    <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['productTypeName'].errors?.minlength">Minimum length is {{valditationConstants.MinNameLength}}</div>
-    <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['productTypeName'].errors?.maxlength">Maximum length is {{valditationConstants.MaxNameLength}}</div>
-
-    <div class="form-group row">
-      <label for="ean" class="col-md-3 col-form-label text-left">EAN</label>
-      <div class="col-md-9">
-        <input type="text" class="form-control" formControlName="ean"
-          [ngClass]="{ 'is-invalid': submitted && f.ean.errors }">
+      <div class="form-group row">
+        <span class="offset-3 px-3" style="color:red;" *ngIf="message">{{message}}</span>
       </div>
-    </div>
-    <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['ean'].errors?.required">EAN is required.</div>
 
-    <div class="form-group row">
-      <label for="price" class="col-md-3 col-form-label text-left">Price</label>
-      <div class="col-md-9">
-        <input type="number" class="form-control" [value]="productTypeForm.get('price').value" step="0.01"
-          formControlName="price" [ngClass]="{ 'is-invalid': submitted && f.price.errors }">
-      </div>
-    </div>
-    <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['price'].errors?.required">Price is required.</div>
-
-    <div class="form-group row">
-      <label for="description" class="col-md-3 col-form-label text-left">Description</label>
-      <div class="col-md-9">
-        <textarea rows="5" class="form-control" formControlName="description"
-          [ngClass]="{ 'is-invalid': submitted && f.description.errors }">
-              </textarea>
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <div class="col-md-9 offset-3">
-        <div class="row justify-content-between px-3">
-          <button type="button" class="btn btn-outline-secondary col-md-4" (click)="createClicked()">Create</button>
-          <a class="btn btn-outline-secondary col-md-4" [routerLink]="'/productTypes'">Back</a>
+      <div class="form-group row">
+        <label for="productTypeName" class="col-md-3 col-form-label text-left">Name</label>
+        <div class="col-md-9">
+          <input type="text" class="form-control" formControlName="productTypeName"
+            [ngClass]="{ 'is-invalid': submitted && f.productTypeName.errors }">
         </div>
       </div>
-    </div>
-  </form>
+      <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['productTypeName'].errors?.required">
+        Name is required.</div>
+      <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['productTypeName'].errors?.minlength">
+        Minimum length is {{valditationConstants.MinNameLength}}</div>
+      <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['productTypeName'].errors?.maxlength">
+        Maximum length is {{valditationConstants.MaxNameLength}}</div>
+
+      <div class="form-group row">
+        <label for="ean" class="col-md-3 col-form-label text-left">EAN</label>
+        <div class="col-md-9">
+          <input type="text" class="form-control" formControlName="ean"
+            [ngClass]="{ 'is-invalid': submitted && f.ean.errors }">
+        </div>
+      </div>
+      <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['ean'].errors?.required">EAN is
+        required.</div>
+
+      <div class="form-group row">
+        <label for="price" class="col-md-3 col-form-label text-left">Price</label>
+        <div class="col-md-9">
+          <input type="number" class="form-control" [value]="productTypeForm.get('price').value" step="0.01"
+            formControlName="price" [ngClass]="{ 'is-invalid': submitted && f.price.errors }">
+        </div>
+      </div>
+      <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && f['price'].errors?.required">Price is
+        required.</div>
+
+      <div class="form-group row">
+        <label for="description" class="col-md-3 col-form-label text-left">Description</label>
+        <div class="col-md-9">
+          <textarea rows="5" class="form-control" formControlName="description"
+            [ngClass]="{ 'is-invalid': submitted && f.description.errors }">
+              </textarea>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="children" class="col-md-3 col-form-label text-left">Children to add</label>
+        <div class="col-md-9">
+          <div class="list-group list-group-flush">
+            <div class="list-group-item card" *ngFor="let child of children">
+              <div class="row">
+                <h5 class="col-md-4">{{child.name}}</h5>
+                <button class="col-md-2 offset-6 btn btn-outline-secondary"
+                  (click)=removeChildClicked(child)>Remove</button>
+              </div>
+              <div class="row">
+                <span class="col-md-4">
+                  <b>EAN:</b>
+                  {{child.ean}}
+                </span>
+                <span class="col-md-4">
+                  <b>Price:</b>
+                  {{child.price}}
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="parents" class="col-md-3 col-form-label text-left">Parents to add</label>
+        <div class="col-md-9">
+          <div class="list-group list-group-flush">
+            <div class="list-group-item card" *ngFor="let parent of parents">
+              <div class="row">
+                <h5 class="col-md-4">{{parent.name}}</h5>
+                <button class="col-md-2 offset-6 btn btn-outline-secondary"
+                  (click)=removeParentClicked(parent)>Remove</button>
+              </div>
+              <div class="row">
+                <span class="col-md-4">
+                  <b>EAN:</b>
+                  {{parent.ean}}
+                </span>
+                <span class="col-md-4">
+                  <b>Price:</b>
+                  {{parent.price}}
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <div class="col-md-9 offset-3">
+          <div class="row justify-content-between px-3">
+            <button type="button" class="btn btn-outline-secondary col-md-4" (click)="createClicked()">Create</button>
+            <a class="btn btn-outline-secondary col-md-4" [routerLink]="'/productTypes'">Back</a>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+
+
+  <div class="col-md-6 p-5">
+    <ngb-tabset>
+      <ngb-tab title="Add Child">
+        <ng-template ngbTabContent>
+          <app-addToProductType (ptAdded)="childAdded($event)"></app-addToProductType>
+        </ng-template>
+      </ngb-tab>
+      <ngb-tab title="Add Parent">
+        <ng-template ngbTabContent>
+          <app-addToProductType (ptAdded)="parentAdded($event)"></app-addToProductType>
+        </ng-template>
+      </ngb-tab>
+    </ngb-tabset>
+  </div>
 </div>
