--- a/Client/src/app/productTypes/addToProductType/addToProductType.component.html
+++ b/Client/src/app/productTypes/addToProductType/addToProductType.component.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="col-md-3 p-3">
-        <button class="btn btn-outline-secondary h-100 w-100" (click)=addClicked(pt)><span class="align-middle">Add</span></button>
+        <button class="btn btn-outline-secondary h-100 w-100" (click)=addClicked(pt) [disabled]="!isEditing"><span class="align-middle">Add</span></button>
       </div>
     </div>
   </div>
