poc for product create

--- a/Client/src/app/core/nav/nav.component.html
+++ b/Client/src/app/core/nav/nav.component.html
@@ -9,7 +9,7 @@
       <li class="nav-item" *ngIf='currentUser'>
         <a class="nav-link" routerLink="/productTypes">ProductTypes</a>
       </li>
-      <li ngbDropdown>
+      <li ngbDropdown  *ngIf='currentUser'>
         <a class="nav-link dropdown" id="productDropdown" ngbDropdownToggle>Products</a>
         <div ngbDropdownMenu aria-labelledby="productDropdown">
           <a class="nav-link" routerLink="/products">Overview</a>
