fixed margins in product, some scanner error fixes

--- a/Client/src/app/products/scanProducts/scanProducts.component.html
+++ b/Client/src/app/products/scanProducts/scanProducts.component.html
@@ -37,7 +37,7 @@
 
   <div class="col-md-6 p-3">
     <form [formGroup]="productsCreateForm">
-      <div class="form-group row">
+      <div class="form-group row mx-0">
         <label for="department" class="col-md-2 col-form-label">Warehouse</label>
         <div class="col-md-4">
           <select class="form-control" formControlName="warehouse"
@@ -48,8 +48,8 @@
           </select>
         </div>
 
-        <label for="department" class="col-md-2 col-form-label">Shelve</label>
-        <div class="col-md-4">
+        <label *ngIf="selectedWarehouse" for="department" class="col-md-2 col-form-label">Shelve</label>
+        <div *ngIf="selectedWarehouse" class="col-md-4">
           <select class="form-control" formControlName="shelve"
             [ngClass]="{ 'is-invalid': submitted && f.shelve.errors }">
             <option *ngFor="let shelve of selectedWarehouse.shelves" [ngValue]="shelve">
@@ -65,31 +65,31 @@
           <b>Products to add</b>
         </span>
       </div>
-        <div class="list-group list-group-flush">
-          <div class="list-group-item card" *ngFor="let product of scannedProducts">
-            <div class="row">
-              <div class="col-md-2"><b>S/N:</b></div>
-              <div class="col-md-4">{{product.RequestModel.serialNumber}}</div>
-              <div class="col-md-2"><b>Type:</b></div>
-              <div class="col-md-4">{{product.ProductTypeName}}</div>
-            </div>
+      <div class="list-group list-group-flush">
+        <div class="list-group-item card" *ngFor="let product of scannedProducts">
+          <div class="row">
+            <div class="col-md-2"><b>S/N:</b></div>
+            <div class="col-md-4">{{product.RequestModel.serialNumber}}</div>
+            <div class="col-md-2"><b>Type:</b></div>
+            <div class="col-md-4">{{product.ProductTypeName}}</div>
+          </div>
 
-            <div class="row">
-              <div class="col-md-2"><b>Description:</b></div>
-              <textarea class="col-md-10" rows="2">{{product.RequestModel.description}}</textarea>
+          <div class="row">
+            <div class="col-md-2"><b>Description:</b></div>
+            <textarea class="col-md-10" rows="2">{{product.RequestModel.description}}</textarea>
+          </div>
+          <div class="row">
+            <div class="col-md-2"><b>Compartement:</b></div>
+            <div class="col-md-6">
+              {{product.RequestModel.compartmentId}}
             </div>
-            <div class="row">
-              <div class="col-md-2"><b>Compartement:</b></div>
-              <div class="col-md-6">
-                {{product.RequestModel.compartmentId}}
-              </div>
-              <div class="col-md-4">
-                <button class="col-md-2 offset-6 btn btn-outline-secondary"
-                  (click)=removeProductClicked(product)>Remove</button>
-              </div>
+            <div class="col-md-4">
+              <button class="col-md-2 offset-6 btn btn-outline-secondary"
+                (click)=removeProductClicked(product)>Remove</button>
             </div>
           </div>
         </div>
+      </div>
     </form>
   </div>
 </div>
