--- a/Client/src/app/employees/employees.component.html
+++ b/Client/src/app/employees/employees.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-start mt-4 mb-4">
+<div class="row justify-content-start mt-4 mb-4 mx-0">
   <a [routerLink]="['/employeeCreate']" class="btn btn-outline-secondary form-control col-md-2 offset-md-1">New</a>
   <form class="form-inline justify-content-around col-md-8">
     <input class="form-control col-md-8" [formControl]="searchControl" placeholder="Search">
