--- a/Client/src/app/productTypes/addToProductType/addToProductType.component.html
+++ b/Client/src/app/productTypes/addToProductType/addToProductType.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-start mt-4 mb-4">
+<div class="row justify-content-start mt-4 mb-4 mx-0">
   <form class="form-inline justify-content-around col-md-8">
     <input class="form-control col-md-8" [formControl]="searchControl" placeholder="Search">
     <button type="submit" class="btn btn-outline-secondary col-md-3" (click)="searchClicked()">Search</button>
