--- a/Client/src/app/productTypes/productTypes.component.scss
+++ b/Client/src/app/productTypes/productTypes.component.scss
@@ -2,3 +2,9 @@
     background-color: transparent;
     border-top: 0;
 }
+
+#productTypeImage{
+    max-height: 10em;
+    width: auto;
+    max-width: 100%;
+}
