--- a/Client/src/app/products/products.component.html
+++ b/Client/src/app/products/products.component.html
@@ -1,3 +1,4 @@
-<p>
-  products works!
+<p class="text-center">
+  An overview of all products.<br>
+  This is just a placeholder for a future functionality.
 </p>
