--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-nav></app-nav>
-<router-outlet></router-outlet>
+<div id="mainDiv">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
